<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestActivity" >

    <Button
        android:id="@+id/btn_backPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@+id/button8"
        android:text="@string/backPaper" />

    <Button
        android:id="@+id/btn_feedkPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_backPaper"
        android:layout_alignRight="@+id/btn_backPaper"
        android:layout_below="@+id/btn_backPaper"
        android:text="@string/feedkPaper" />

    <Button
        android:id="@+id/btn_SetBlackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_GetBlackValue"
        android:layout_below="@+id/btn_GetBlackValue"
        android:layout_toLeftOf="@+id/button8"
        android:text="Set black mark density (black mark adjustment)" />

    <Button
        android:id="@+id/btn_SetCharWH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_backPaper"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_backPaper"
        android:layout_toRightOf="@+id/button8"
        android:text="Print large font settings for characters" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/exitSet" />

    <Button
        android:id="@+id/btn_SetCharWHcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_StatusCheck"
        android:layout_toLeftOf="@+id/btn_SetCharWH_zhong"
        android:layout_toRightOf="@+id/button8"
        android:text="Regular font settings" />

    <Button
        android:id="@+id/btn_SetCharWH_xi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Western"
        android:layout_below="@+id/btn_SetCharWH"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_SetCharWH_zhong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_StatusCheck"
        android:layout_toLeftOf="@+id/btn_SetCharWH_xi"
        android:text=" Chinese" />

    <Button
        android:id="@+id/btn_StatusCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_PrintPinTest"
        android:layout_alignRight="@+id/btn_SetCharWH_xi"
        android:layout_below="@+id/btn_feedkPaper"
        android:text=" Printer status detection" />

    <Button
        android:id="@+id/btn_GetBlackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_StatusCheck"
        android:layout_alignBottom="@+id/btn_StatusCheck"
        android:layout_alignLeft="@+id/btn_feedkPaper"
        android:layout_toLeftOf="@+id/button8"
        android:text=" Read black mark adjustment value (concentration)" />

    <Button
        android:id="@+id/btn_PrintPinTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_SetCharWH_xi"
        android:layout_below="@+id/btn_StatusCheck"
        android:layout_toRightOf="@+id/button8"
        android:text="Print pin test" />

</RelativeLayout>